--- a/public/index.html
+++ b/public/index.html
@@ -384,7 +384,14 @@
         </div>
 
         <!-- メッセージ表示エリア -->
+        <div id="result" style="display:none"></div>
+        <div id="error" style="display:none"></div>
         <div id="messageArea"></div>
+        <!-- ローディング表示エリア -->
+        <div id="loading" style="display:none">
+          <div class="spinner-border text-primary" role="status"></div>
+          <p>処理中...</p>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
